fixed room reservation width on smaller screens

--- a/front-end/src/components/entities/reservation/ReservationCalendar/ReservationCalendar.module.scss
+++ b/front-end/src/components/entities/reservation/ReservationCalendar/ReservationCalendar.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-grow: 0 !important;
     width: 150px;
+    max-width: none;
     align-items: center;
     border-right: solid 1px rgb(var(--color-background));
     padding: 0.5rem;
